--- a/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
+        <div class="btn-group" appDropdown>
             <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a href="#">To Shopping list</a></li>
@@ -25,8 +25,8 @@
         {{ recipe.description }}
     </div>
 </div>
-<div class="row">
+<!-- <div class="row">
     <div class="col-xs-12">
         {{ recipe.ingredients }}
     </div>
-</div>
+</div> -->
